crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@142.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row(1, '(1,2)')::testtype4 *<> row(1, '(1,3)')::testtype4;"
---
SelectStmt@0..65
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..64
    AExpr@7..64
      TypeCast@7..33
        RowExpr@7..21
          Row@7..10 "row"
          Ascii40@10..11 "("
          AConst@11..12
            Iconst@11..12 "1"
          Ascii44@12..13 ","
          Whitespace@13..14 " "
          AConst@14..21
            Sconst@14..21 "'(1,2)'"
        Ascii41@21..22 ")"
        Typecast@22..24 "::"
        TypeName@24..33
          Ident@24..33 "testtype4"
      Whitespace@33..34 " "
      Op@34..37 "*<>"
      Whitespace@37..38 " "
      TypeCast@38..64
        RowExpr@38..52
          Row@38..41 "row"
          Ascii40@41..42 "("
          AConst@42..43
            Iconst@42..43 "1"
          Ascii44@43..44 ","
          Whitespace@44..45 " "
          AConst@45..52
            Sconst@45..52 "'(1,3)'"
        Ascii41@52..53 ")"
        Typecast@53..55 "::"
        TypeName@55..64
          Ident@55..64 "testtype4"
  Ascii59@64..65 ";"

