crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@145.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create type testtype5 as (a int);
---
CompositeTypeStmt@0..33
  Create@0..6 "create"
  Whitespace@6..7 " "
  TypeP@7..11 "type"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "testtype5"
  Whitespace@21..22 " "
  As@22..24 "as"
  Whitespace@24..25 " "
  Ascii40@25..26 "("
  ColumnDef@26..31
    Ident@26..27 "a"
    Whitespace@27..28 " "
    TypeName@28..31
      IntP@28..31 "int"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

