crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@149.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select row(1, '(1,2)')::testtype6 *< row(1, '(1,3)')::testtype6;"
---
SelectStmt@0..64
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..63
    AExpr@7..63
      TypeCast@7..33
        RowExpr@7..21
          Row@7..10 "row"
          Ascii40@10..11 "("
          AConst@11..12
            Iconst@11..12 "1"
          Ascii44@12..13 ","
          Whitespace@13..14 " "
          AConst@14..21
            Sconst@14..21 "'(1,2)'"
        Ascii41@21..22 ")"
        Typecast@22..24 "::"
        TypeName@24..33
          Ident@24..33 "testtype6"
      Whitespace@33..34 " "
      Op@34..36 "*<"
      Whitespace@36..37 " "
      TypeCast@37..63
        RowExpr@37..51
          Row@37..40 "row"
          Ascii40@40..41 "("
          AConst@41..42
            Iconst@41..42 "1"
          Ascii44@42..43 ","
          Whitespace@43..44 " "
          AConst@44..51
            Sconst@44..51 "'(1,3)'"
        Ascii41@51..52 ")"
        Typecast@52..54 "::"
        TypeName@54..63
          Ident@54..63 "testtype6"
  Ascii59@63..64 ";"

