crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@155.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE price (\n    id SERIAL PRIMARY KEY,\n    active BOOLEAN NOT NULL,\n    price NUMERIC\n);"
---
CreateStmt@0..97
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..18
    Ident@13..18 "price"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  Newline@20..21 "\n"
  Whitespace@21..25 "    "
  ColumnDef@25..46
    Ident@25..27 "id"
    Whitespace@27..28 " "
    TypeName@28..34
      Ident@28..34 "SERIAL"
    Whitespace@34..35 " "
    Constraint@35..46
      Primary@35..42 "PRIMARY"
      Whitespace@42..43 " "
      Key@43..46 "KEY"
  Ascii44@46..47 ","
  Newline@47..48 "\n"
  Whitespace@48..52 "    "
  ColumnDef@52..75
    Ident@52..58 "active"
    Whitespace@58..59 " "
    TypeName@59..66
      BooleanP@59..66 "BOOLEAN"
    Whitespace@66..67 " "
    Constraint@67..75
      Not@67..70 "NOT"
      Whitespace@70..71 " "
      NullP@71..75 "NULL"
  Ascii44@75..76 ","
  Newline@76..77 "\n"
  Whitespace@77..81 "    "
  ColumnDef@81..94
    Ident@81..86 "price"
    Whitespace@86..87 " "
    TypeName@87..94
      Numeric@87..94 "NUMERIC"
  Newline@94..95 "\n"
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

