crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@156.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TYPE price_input AS (\n    id INTEGER,\n    price NUMERIC\n);"
---
CompositeTypeStmt@0..65
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  TypeP@7..11 "TYPE"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "price_input"
  Whitespace@23..24 " "
  As@24..26 "AS"
  Whitespace@26..27 " "
  Ascii40@27..28 "("
  Newline@28..29 "\n"
  Whitespace@29..33 "    "
  ColumnDef@33..43
    Ident@33..35 "id"
    Whitespace@35..36 " "
    TypeName@36..43
      Integer@36..43 "INTEGER"
  Ascii44@43..44 ","
  Newline@44..45 "\n"
  Whitespace@45..49 "    "
  ColumnDef@49..62
    Ident@49..54 "price"
    Whitespace@54..55 " "
    TypeName@55..62
      Numeric@55..62 "NUMERIC"
  Newline@62..63 "\n"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

